--- a/content/resources/9-56jf04.md
+++ b/content/resources/9-56jf04.md
@@ -3,7 +3,7 @@ content_type: resource
 description: The Tower of Babel by Pieter Bruegel the Elder. (Image courtesy of the
   WebMuseum Web site. Photographs of Bruegel works in WebMuseum by Mark Harden and
   Carol Gerten-Jackson.)
-file: /media/courses/9-56j-abnormal-language-fall-2004/68c2cf9eb780d32a5afeae11e6d8a6fe_9-56jf04.jpg
+file: /courses/9-56j-abnormal-language-fall-2004/68c2cf9eb780d32a5afeae11e6d8a6fe_9-56jf04.jpg
 file_type: image/jpeg
 image_metadata:
   caption: _The Tower of Babel_ by Pieter Bruegel the Elder. (Image courtesy of the
@@ -13,8 +13,10 @@ image_metadata:
   credit: ''
   image-alt: The Tower of Babel, Bruegel.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: The Tower of Babel
 uid: 68c2cf9e-b780-d32a-5afe-ae11e6d8a6fe
 ---
+The Tower of Babel by Pieter Bruegel the Elder. (Image courtesy of the WebMuseum Web site. Photographs of Bruegel works in WebMuseum by Mark Harden and Carol Gerten-Jackson.)
