Sync all content

--- a/content/resources/9-56jf04-th.md
+++ b/content/resources/9-56jf04-th.md
@@ -8,9 +8,9 @@ file_size: 12907
 file_type: image/jpeg
 image_metadata:
   caption: _The Tower of Babel_ by Pieter Bruegel the Elder. (Image courtesy of the
-    [WebMuseum Web site](http://www.ibiblio.org/wm/). Photographs of [Bruegel works
-    in WebMuseum](http://www.ibiblio.org/wm/paint/auth/bruegel/) by Mark Harden and
-    Carol Gerten-Jackson.)
+    {{% resource_link "d4ed52cc-830a-4623-809e-08a2b2d2f94a" "WebMuseum Web site"
+    %}}. Photographs of {{% resource_link "f974b61a-b78b-49a3-8859-979c4387ca85" "Bruegel
+    works in WebMuseum" %}} by Mark Harden and Carol Gerten-Jackson.)
   credit: ''
   image-alt: The Tower of Babel, Bruegel.
 learning_resource_types: []
